update from conflict-branch

--- a/index.html
+++ b/index.html
@@ -1129,7 +1129,7 @@
             </div>
         </div>
     </main>
-
+    <div></div>
     <footer>
         <div class="footer-content">
             <div class="footer-logo">
