Initial commit on conflict-branch

--- a/index.html
+++ b/index.html
@@ -1130,6 +1130,7 @@
         </div>
     </main>
     <div></div>
+    <div><h1></h1></div>
     <footer>
         <div class="footer-content">
             <div class="footer-logo">
