--- a/index.html
+++ b/index.html
@@ -1129,7 +1129,9 @@
             </div>
         </div>
     </main>
-    <div></div>
+    <div>
+        <h1></h1>
+    </div>
     <footer>
         <div class="footer-content">
             <div class="footer-logo">
