--- a/index.html
+++ b/index.html
@@ -1133,7 +1133,7 @@
         <h1></h1>
     </div>
     <footer>
-        <div class="footer-content">
+        <!-- <div class="footer-content">
             <div class="footer-logo">
                 <i class="fa-brands fa-git-alt"></i>
                 <span>Git Quest</span>
@@ -1144,9 +1144,9 @@
                 <a href="#">Privacy</a>
                 <a href="#">Terms</a>
             </div>
-        </div>
+        </div> -->
         <div class="footer-copyright">
-            <p>&copy; 2023 Git Quest. All rights reserved.</p>
+            <p>&copy; 2025 Git Quest. All rights reserved.</p>
         </div>
     </footer>
 
