Profile Photo Updated

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <span class="level-value">2</span>
             </div>
             <div class="user-avatar">
-                <img src="/placeholder.svg?height=40&width=40" alt="User Avatar">
+                <img src="https://m.media-amazon.com/images/S/aplus-media/vc/eeae6f85-4736-4672-9a64-a17ceefe4d87._SL300__.png" alt="User Avatar">
             </div>
         </div>
     </header>
@@ -182,7 +182,7 @@
                     <div class="top-performer second-place">
                         <div class="rank">2</div>
                         <div class="user-avatar">
-                            <img src="/placeholder.svg?height=60&width=60" alt="Second Place">
+                            <img src="https://m.media-amazon.com/images/S/aplus-media/vc/eeae6f85-4736-4672-9a64-a17ceefe4d87._SL300__.png" alt="Second Place">
                         </div>
                         <div class="user-name">JaneDev</div>
                         <div class="user-xp">1850 XP</div>
@@ -273,7 +273,7 @@
         <section id="profile" class="hidden-section">
             <div class="profile-header">
                 <div class="profile-avatar">
-                    <img src="/placeholder.svg?height=120&width=120" alt="Profile Avatar">
+                    <img src="https://m.media-amazon.com/images/S/aplus-media/vc/eeae6f85-4736-4672-9a64-a17ceefe4d87._SL300__.png" alt="Profile Avatar">
                 </div>
                 <div class="profile-info">
                     <h2>Your Profile</h2>
