--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <div class="top-performer first-place">
                         <div class="rank">1</div>
                         <div class="user-avatar">
-                            <img src="/placeholder.svg?height=80&width=80" alt="First Place">
+                            <img src="https://yt3.googleusercontent.com/yrfyzQYlBIj_a5A35QNnx1r-sxCo7od_YgmZmKjVDcoKi04s1fzusbExbd1cUw-Ymrx3n7F5kA=s900-c-k-c0x00ffffff-no-rj" alt="First Place">
                         </div>
                         <div class="user-name">GitMaster</div>
                         <div class="user-xp">2340 XP</div>
@@ -198,7 +198,7 @@
                     <div class="top-performer third-place">
                         <div class="rank">3</div>
                         <div class="user-avatar">
-                            <img src="/placeholder.svg?height=60&width=60" alt="Third Place">
+                            <img src="https://yt3.googleusercontent.com/GyLEdLKX4ZTpYsjk68s4-Lti6P94-m9QZlqAQwOY0sfQPw-Vja8fLZ-O440I6ee2O2f-k3VJvg=s900-c-k-c0x00ffffff-no-rj" alt="Third Place">
                         </div>
                         <div class="user-name">CodeNinja</div>
                         <div class="user-xp">1720 XP</div>
