Added new Leaderboard Member

--- a/index.html
+++ b/index.html
@@ -265,6 +265,18 @@
                                 <i class="fa-solid fa-star" title="First Commit"></i>
                             </td>
                         </tr>
+                        <tr>
+                            <td>8</td>
+                            <td class="user-cell">
+                                <img src="https://i.pinimg.com/736x/18/67/ca/1867ca6916da84ec47e3e5ba496643d0.jpg" alt="User">
+                                <span>RepoMaster</span>
+                            </td>
+                            <td>2</td>
+                            <td>100 XP</td>
+                            <td class="badges-cell">
+                                <i class="fa-solid fa-star" title="First Commit"></i>
+                            </td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
