--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="logo">
             <i class="fa-brands fa-git-alt"></i>
-            <h1>hello git arpita</h1>
+            <h1>Git Quest</h1>
         </div>
         <nav>
             <ul>
