--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <li class="active"><a href="#home">Home</a></li>
                 <li><a href="#challenges">Challenges</a></li>
                 <li><a href="#leaderboard">Leaderboard</a></li>
-                <li><a href="#profile">Pro
-                    
-                </nav>
+                <li><a href="#profile">Profile</a></li>
+            </ul>
+        </nav>
         <div class="user-info">
             <div class="xp-container">
                 <span class="xp-label">XP:</span>
