--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="#challenges">Challenges</a></li>
                 <li><a href="#leaderboard">Leaderboard</a></li>
                 <li><a href="#profile">Profile</a></li>
+                <li class="active"><a href="settings.html">Settings</a></li>
             </ul>
         </nav>
         <div class="user-info">
