--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
         </div>
         <nav>
             <ul>
-                <li class="active"><a href="#home">Home</a></li>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#challenges">Challenges</a></li>
                 <li><a href="#leaderboard">Leaderboard</a></li>
                 <li><a href="#profile">Profile</a></li>
-                <li class="active"><a href="settings.html">Settings</a></li>
+                <li><a href="#documentation">Docs</a></li>
+                <li class="active"><a href="#settings">Settings</a></li>
             </ul>
         </nav>
         <div class="user-info">
@@ -1141,7 +1142,7 @@
                 </div>
             </div>
         </div>
-        <section class="documentation active-section">
+        <section class="documentation active-section" id="documentation">
             <h2>Git Documentation</h2>
             
             <div class="doc-container">
@@ -1188,7 +1189,7 @@ git add .          # Add all files</code></pre>
                 </div>
             </div>
         </section>
-        <section class="settings active-section">
+        <section class="settings active-section" id="settings">
             <h2>Settings</h2>
             
             <div class="settings-container">
