Added Dark mode in html

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
                 <img src="https://m.media-amazon.com/images/S/aplus-media/vc/eeae6f85-4736-4672-9a64-a17ceefe4d87._SL300__.png" alt="User Avatar">
             </div>
         </div>
+        <div class="dark-mode-toggle">
+            <label class="switch">
+              <input type="checkbox" id="darkModeToggle">
+              <span class="slider"></span>
+            </label>
+          </div>
+          
     </header>
 
     <main>
