--- a/index.html
+++ b/index.html
@@ -1686,7 +1686,7 @@
                 <div class="settings-sidebar">
                     <ul>
                         <li class="active"><a href="#account">Account</a></li>
-                        <li><a href="#appearance">Appearance</a></li>
+                        <!-- <li><a href="#appearance">Appearance</a></li> -->
                         <li><a href="#notifications">Notifications</a></li>
                         <li><a href="#privacy">Privacy</a></li>
                     </ul>
