improved dark mode styles

--- a/index.html
+++ b/index.html
@@ -1151,7 +1151,7 @@
             </div>
         </div>
         <section class="documentation active-section" id="documentation">
-            <h2 style="color: black;">Git Documentation</h2>
+            <h2 class="gitdocu" style="color: black;">Git Documentation</h2>
             
             <div class="doc-container">
                 <div class="doc-sidebar">
