updated profile and setttings

--- a/index.html
+++ b/index.html
@@ -1710,7 +1710,8 @@
                             <label for="avatar">Profile Picture</label>
                             <div class="avatar-selector">
                                 <img id="current-avatar" src="https://m.media-amazon.com/images/S/aplus-media/vc/eeae6f85-4736-4672-9a64-a17ceefe4d87._SL300__.png" alt="Current Avatar" class="current-avatar">
-                                <button type="button" class="change-avatar-btn" id="change-avatar-btn">Change Avatar</button>
+                                <label for="avatar-input" class="change-avatar-btn">Change Avatar</label>
+                                <input type="file" id="avatar-input" accept="image/*">
                             </div>
                         </div>
 
@@ -1719,7 +1720,6 @@
                 </div>
             </div>
         </div>
-            
             <div id="notifications" class="settings-section">
                 <h3>Notification Settings</h3>
                 
