--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#challenges">Challenges</a></li>
-                <li><a href="#leaderboard">Leaderboard</a></li>
-                <li><a href="#profile">Profile</a></li>
-                <li><a href="#documentation">Docs</a></li>
-                <li class="active"><a href="#settings">Settings</a></li>
-                <li class="active"><a href="#forum">Forum</a></li>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#challenges">Challenges</a></li>
+              <li><a href="#leaderboard">Leaderboard</a></li>
+              <li><a href="#profile">Profile</a></li>
+              <li><a href="#documentation">Docs</a></li>
+              <li class="active"><a href="#settings">Settings</a></li>
+              <li class="active"><a href="#forum">Forum</a></li>
+              <li><a href="#" id="collaboration-link">Collaboration</a></li>
             </ul>
-        </nav>
+          </nav>
+          
         <div class="user-info">
             <div class="xp-container">
                 <span class="xp-label">XP:</span>
@@ -1915,7 +1917,12 @@
             <p>&copy; 2025 Git Quest. All rights reserved.</p>
         </div>
     </footer>
-
+    <script>
+        document.getElementById('collaboration-link').addEventListener('click', function(event) {
+          event.preventDefault(); // Stop the default # jump
+          window.location.href = 'git.html'; // Redirect to git.html
+        });
+      </script>
     <script src="script.js"></script>
 </body>
 </html>
