updated git and index

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <li><a href="#documentation">Docs</a></li>
               <li class="active"><a href="#settings">Settings</a></li>
               <li class="active"><a href="#forum">Forum</a></li>
-              <li><a href="#" id="collaboration-link">Collaboration</a></li>
+              <li><a href="git.html" id="collaboration-link">Collaboration</a></li>
             </ul>
           </nav>
           
