--- a/git.html
+++ b/git.html
@@ -16,16 +16,8 @@
             <h1>Git Quest</h1>
         </div>
         <nav>
-            <ul>
-                <li><a href="index.html#home">Home</a></li>
-                <li><a href="index.html#challenges">Challenges</a></li>
-                <li><a href="index.html#leaderboard">Leaderboard</a></li>
-                <li><a href="index.html#profile">Profile</a></li>
-                <li><a href="index.html#documentation">Docs</a></li>
-                <li><a href="index.html#settings">Settings</a></li>
-                <li><a href="index.html#forum">Forum</a></li>
-                <li class="active"><a href="git.html" id="collaboration-link">Collaboration</a></li>
-                
+            <ul id="navbar-links">
+              <!-- Navbar links yaha inject honge -->
             </ul>
           </nav>
         <div class="user-info">
@@ -219,5 +211,7 @@
 
     <script src="script.js"></script>
     <script src="git.js"></script>
+    <script src="navbar.js"></script>
+
 </body>
 </html>
