--- a/index.html
+++ b/index.html
@@ -14,15 +14,8 @@
             <h1>Git Quest</h1>
         </div>
         <nav>
-            <ul>
-              <li><a href="#home">Home</a></li>
-              <li><a href="#challenges">Challenges</a></li>
-              <li><a href="#leaderboard">Leaderboard</a></li>
-              <li><a href="#profile">Profile</a></li>
-              <li><a href="#documentation">Docs</a></li>
-              <li class="active"><a href="#settings">Settings</a></li>
-              <li class="active"><a href="#forum">Forum</a></li>
-              <li><a href="git.html" id="collaboration-link">Collaboration</a></li>
+            <ul id="navbar-links">
+              <!-- Navbar links yaha inject honge -->
             </ul>
           </nav>
           
@@ -1927,5 +1920,7 @@
         });
       </script>
     <script src="script.js"></script>
+    <script src="navbar.js"></script>
+
 </body>
 </html>
